Added apache commons base64 package.